Fix packaging: runnable fat jar for V4 post-refactoring