@@ -58,8 +58,16 @@
     </dependencies>
 
     <build>
-        <finalName>tour-guide-planner-v3.0-all-with-dependencies</finalName>
+        <finalName>tour-guide-planner-v4.0-post-refactoring</finalName>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -80,13 +88,13 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
-                    <appendAssemblyId>false</appendAssemblyId>
+                    <appendAssemblyId>true</appendAssemblyId>
                     <archive>
                         <manifest>
                             <mainClass>it.unibs.ingsw24_25.cli.Main</mainClass>
                         </manifest>
                     </archive>
-                    <finalName>${project.artifactId}-featuresV3</finalName>
+                    <finalName>${project.artifactId}-featuresV4-post-refactoring</finalName>
                 </configuration>
                 <executions>
                     <execution>
